--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   },
   "homepage": "https://github.com/rodo08/202209-w1chwe-Nuria-Ramoneda-Rodrigo-Rosales#readme",
   "devDependencies": {
-    "sass": "^1.55.0",
-    "husky": "^8.0.0"
-  },
-  "dependencies": {}
+    "husky": "^8.0.0",
+    "sass": "^1.55.0"
+  }
 }
